[package]
name = "hirata-store-api"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = "0.12.7"
tokio = "1.39.3"
dotenv = "0.15.0"
uuid = { version = "1.10.0", features = ["v4"] }
